# teleborg

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  chat.rs  command.rs  command_handler.rs  dispatcher.rs  error.rs  lib.rs  marker.rs  message.rs  message_entity.rs  update.rs  updater.rs  updater.sublime-workspace  user.rs  value_extension.rs
src/bot/: chat_action.rs  file.rs  media.rs  messaging.rs  mod.rs  parse_mode.rs
src/errors/: boterror.rs  mod.rs
src/methods/: add_sticker_to_set.rs  answer_callback_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  create_new_sticker_set.rs  delete_chat_photo.rs  delete_chat_sticker_set.rs  delete_message.rs  delete_sticker_from_set.rs  edit_message_caption.rs  edit_message_live_location.rs  edit_message_media.rs  edit_message_reply_markup.rs  edit_message_text.rs  export_chat_invite_link.rs  forward_message.rs  get_chat.rs  get_chat_administrators.rs  get_chat_member.rs  get_chat_members_count.rs  get_file.rs  get_game_high_scores.rs  get_sticker_set.rs  get_updates.rs  get_user_profile_photos.rs  kick_chat_member.rs  leave_chat.rs  mod.rs  pin_chat_message.rs  promote_chat_member.rs  restrict_chat_member.rs  send_animation.rs  send_audio.rs  send_chat_action.rs  send_contact.rs  send_document.rs  send_game.rs  send_invoice.rs  send_location.rs  (+24 more)
src/objects/: animation.rs  audio.rs  call_back_query.rs  chat.rs  chosen_inline_result.rs  contact.rs  document.rs  file.rs  game.rs  inline_keyboard.rs  inline_query.rs  location.rs  message.rs  message_entity.rs  mod.rs  photo_size.rs  sticker.rs  update.rs  user.rs  user_profile_photos.rs  (+3 more)
tests/: test.rs  test_bot.rs  test_chat_action.rs  test_contact.rs  test_inline_keyboard.rs  test_methods.rs  test_send_contact.rs  test_updater.rs
(+156 files in other folders)
