[package]
name = "teleborg"
version = "0.1.32"
authors = ["Wesley A. Gahr <wesleyey0408@gmail.com>"]
documentation = "https://docs.rs/teleborg/0.1.32/teleborg/"
license = "Apache-2.0"
description = "A Telegram bot API."
repository = "https://github.com/voider1/teleborg"
readme = "README.md"
keywords = ["telegram-bot", "rust", "telegram-api"]

[dependencies]
typed-builder = "0.1"
failure = "0.1"
log = { version = "0.3", features = ["release_max_level_info"] }
reqwest = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
