[package]
name = "teleborg"
version = "0.1.32"
authors = ["Wesley A. Gahr <wesleyey0408@gmail.com>"]
documentation = "https://docs.rs/teleborg/0.1.32/teleborg/"
license = "Apache-2.0"
description = "A Telegram bot API."
repository = "https://github.com/voider1/teleborg"
readme = "README.md"
keywords = ["telegram-bot", "rust", "telegram-api"]

[dependencies]
log = { version = "0.4.6", features = ["release_max_level_info"] }
reqwest = "0.9.5"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"
