[package]
name = "teleborg"
version = "0.1.32"
authors = ["Wesley A. Gahr <wesley.gahr@me.com>"]
documentation = "https://docs.rs/teleborg/0.1.32/teleborg/"
license = "Apache-2.0"
description = "A Telegram bot API."
repository = "https://gitlab.com/Gahr/teleborg/"
readme = "README.md"
keywords = ["telegram-bot", "rust", "telegram-api"]
edition = "2018"

[dependencies]
typed-builder = "0.3"
failure = "0.1"
log = { version = "0.3", features = ["release_max_level_info"] }
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tokio = "0.1"
futures = "0.1"
